# finansproject

./: README.md  mylog.txt  pyproject.toml
data/: transactions_excel.xlsx
finansproject/: README.md  pyproject.toml
src/: copi.py  decorators.py  external_api.py  filter_transactions.py  filter_transactions_category.py  generators.py  main.py  mask.py  masks.py  mylog.txt  processing.py  reader_1.py  reader_file.py  utils.py  widget.py
tests/: mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_mask.py  test_processing.py  test_reader_file.py  test_utils.py  test_widget.py
